# cpp_kalman_filter_tracker

./: CMakeLists.txt  Dockerfile  README.md  TrackedObject.h  Tracker.h  main.cpp  matrix_examples.cpp
data/: README.md  test_data1.txt  test_data2.txt  test_data3.txt  test_data4.txt
extra/: matrix_examples.cpp
src/: Graphics.h  TrackedObject.cpp  TrackedObject.h  Tracker.cpp  Tracker.h  cout_mtx_.h  main.cpp
